fix: -color contrast wave

--- a/assets/style.css
+++ b/assets/style.css
@@ -111,7 +111,7 @@ body {
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
 	color: #fff;
-	background-color: #a59b2f;
+	background-color: #8f8303;
 	border-radius:0 ;
 }
 .nav-pills .nav-link {
